# MaDDG

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPDX.spdx  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
configs/: sample_sensor_network.yaml  submitit_slurm_template.json
docs/: Makefile  conf.py  how_to_guides.rst  index.md  index.rst  reference.rst  requirements.txt
docs/api/: madlib.rst  modules.rst
docs/how_to_guides/: example_1-propagate-satellite.ipynb  example_4-satellite-maneuvers.ipynb
examples/: example_1-propagate-satellite.ipynb  example_2-observe-satellite.ipynb  example_3-sensor-collections.ipynb  example_4-satellite-maneuvers.ipynb  example_5-launching-simulations.ipynb
examples/example_inputs/: sample_sensor_network.yaml
scripts/: dropout.py  hz_launcher.py
src/maddg/: _residuals.py  _sim_launcher.py
src/madlib/: __init__.py  _maneuver.py  _observation.py  _satellite.py  _sensor.py  _sensor_collection.py  _utils.py
tests/: conftest.py  test_configs.py  test_dropout.py  test_hz_launcher.py  test_madlib_observations.py  test_madlib_satellite.py  test_madlib_sensor.py  test_madlib_sensor_collection.py  test_propagate.py  test_sim_launcher.py  test_utils.py
tests/inputs/: blind_sensor.yaml  complete.continuous.csv  complete.impulse.csv  invalid_sensor_1.yaml  invalid_sensor_2.yaml  invalid_sensor_3.yaml  invalid_sensor_4.yaml  students_t_sensors.yaml  submitit_invalid.json  submitit_test.json
